# OpenWrt_Luci_Lua

./: OpenWrt命令记录.txt  README.md  openwrt命令记录.lua  openwrt命令记录.lua~  tags  updateWifi.lua~  week-report.txt  week-report2.txt  week-report2.txt~
1_1.Mi_Lua/: Posix.lua  json.lua  mime.so.1.0.2  rc4.lua  slaxdom.lua  socket.so.2.0.2  tags  xssFilter.lua
1_1.mi_Lua/: sha1.lua
1_2.mind_map/: 1_1.smart_wifi_updown.xmind  1_2.openwrt-development.xmind  1_3.http-proxy-cache-server .xmind  1_4.nginx_source_scan_http_module.xmind  1_5.future-plan.xmind  1_6.the_shell_programing.xmind  1_7.Dlna-Introduction.xmind  1_8.Cross-compiling-kernel .xmind  1_8.Lua Demo.xmind  2_0.Docker.xmind  2_1.OAuth_Token.xmind  2_2.r12TechSolusion.xmind  2_2.r12TechSolusionFramework.xmind  2_3.r18插件.xmind  2_4.R18待评估插件(逗比版).xmind  2_4.R18待评估插件.xmind  2_5.BT插件方案分析.xmind  2_6.R18S PRD.xmind  2_7.plug_frame_module.xmind  2_8.暗時間.xmind  2_9.自定义插件功能分析.xmind  3_1.协议包解析.xmind  MLive需求分析.xmind  R18s产品与运营问题分析.xmind  R22功能模块分析.xmind  R22厂测接口实现.xmind  TimeLine(Apri,2016).xmind  TimeLine(Aug,2015).xmind  TimeLine(Aug,2016).xmind  TimeLine(DEC,2015).xmind  TimeLine(Feb,2016).xmind  TimeLine(JAN,2016).xmind  TimeLine(July,2016).xmind  TimeLine(Mar,2016).xmind  TimeLine(NOV,2015).xmind  TimeLine(OCT,2015).xmind  adbyby bug about 今日头条.xmind  http-proxy-cache-server .xmind  openwrt命令记录.xmind  openwrt开发.xmind  (+5 more)
1_3.smart_wifi_code/: nwfs.lua
1_5.sed_test/: sedTest
1_6.h12_dev/render/include/: Makefile  Makefile.am  Makefile.in  cAVTransport.h  cConnectionManager.h  cRenderer.h  cRenderingControl.h  cService.h
(+2432 files in other folders)
