## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

renderer_includedir = $(pkgincludedir)

renderer_include_DATA = \
	cService.h\
	cRenderingControl.h\
	cRenderer.h\
	cConnectionManager.h\
	cAVTransport.h

EXTRA_DIST = $(renderer_include_DATA)
